Async utilities instead of threading patcher

--- a/src/UnitySampleProject/Packages/manifest.json
+++ b/src/UnitySampleProject/Packages/manifest.json
@@ -50,18 +50,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
-  },
-  "testables": [
-    "io.chainsafe.web3-unity"
-  ],
-  "scopedRegistries": [
-    {
-      "name": "package.openupm.com",
-      "url": "https://package.openupm.com",
-      "scopes": [
-        "com.nethereum.unity"
-      ]
-    }
-  ]
+    "com.unity.modules.xr": "1.0.0",
+    "com.utilities.async": "https://github.com/RageAgainstThePixel/com.utilities.async.git#upm"
+  }
 }
