registries and manifest fix

--- a/src/UnitySampleProject/Packages/manifest.json
+++ b/src/UnitySampleProject/Packages/manifest.json
@@ -52,5 +52,18 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0",
     "com.utilities.async": "https://github.com/RageAgainstThePixel/com.utilities.async.git#upm"
-  }
+  },
+  "testables": [
+    "io.chainsafe.web3-unity"
+  ],
+  "enableLockFile": true,
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.nethereum.unity"
+      ]
+    }
+  ]
 }
