--- a/src/UnitySampleProject/Packages/manifest.json
+++ b/src/UnitySampleProject/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.utilities.async": "https://github.com/RageAgainstThePixel/com.utilities.async.git#upm",
     "io.chainsafe.web3-unity": "file:../../../Packages/io.chainsafe.web3-unity",
     "io.chainsafe.web3-unity.hyperplay": "file:../../../Packages/io.chainsafe.web3-unity.hyperplay",
     "io.chainsafe.web3-unity.lootboxes": "file:../../../Packages/io.chainsafe.web3-unity.lootboxes",
@@ -50,7 +51,7 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0",
-    "com.utilities.async": "https://github.com/RageAgainstThePixel/com.utilities.async.git#upm"
+    "com.tools.webglthreadingpatcher": "https://github.com/VolodymyrBS/WebGLThreadingPatcher.git"
   },
   "testables": [
     "io.chainsafe.web3-unity"
