--- a/Packages/io.chainsafe.web3-unity.ramp/Editor/io.chainsafe.web3-unity.ramp.editor.asmdef
+++ b/Packages/io.chainsafe.web3-unity.ramp/Editor/io.chainsafe.web3-unity.ramp.editor.asmdef
@@ -1,10 +1,10 @@
 {
-    "name": "io.chainsafe.web3-unity.ramp.samples",
-    "rootNamespace": "ChainSafe.Gaming.Exchangers.Ramp.Sample",
+    "name": "io.chainsafe.web3-unity.ramp.editor",
+    "rootNamespace": "ChainSafe.Gaming.Exchangers.Ramp",
     "references": [
         "GUID:5426c6b788696eb4c88f4198b59839eb",
-        "GUID:a6d2ec6af5b0961468c9e2fca41a75be",
-        "GUID:0c461a5db205b5c4586f5efc524c2e08"
+        "GUID:a37273c0f1cc99640b9cce89c64b02d0",
+        "GUID:a6d2ec6af5b0961468c9e2fca41a75be"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
