--- a/src/UnitySampleProject/Assets/Samples/web3.unity SDK/2.6.0/Web3.Unity Samples/Scripts/Samples.asmdef
+++ b/src/UnitySampleProject/Assets/Samples/web3.unity SDK/2.6.0/Web3.Unity Samples/Scripts/Samples.asmdef
@@ -6,7 +6,8 @@
         "GUID:a37273c0f1cc99640b9cce89c64b02d0",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:a6d2ec6af5b0961468c9e2fca41a75be",
-        "GUID:beb3cfa44e4e012468271dba212943b0"
+        "GUID:beb3cfa44e4e012468271dba212943b0",
+        "GUID:0c461a5db205b5c4586f5efc524c2e08"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
