--- a/Packages/io.chainsafe.web3-unity.mud/package.json
+++ b/Packages/io.chainsafe.web3-unity.mud/package.json
@@ -1,13 +1,13 @@
 {
     "name": "io.chainsafe.web3-unity.mud",
-    "version": "2.7.0",
+    "version": "3.0.0",
     "displayName": "web3.unity SDK MUD",
     "description": "This package includes the integration of MUD, which you can use with our Gaming SDK.",
     "license": "LGPL-3.0-only",
     "licensesUrl": "https://github.com/ChainSafe/web3.unity/blob/main/LICENSE",
     "documentationUrl": "https://docs.gaming.chainsafe.io/",
     "dependencies": {
-        "io.chainsafe.web3-unity": "2.6.1"
+        "io.chainsafe.web3-unity": "3.0.0"
     },
     "keywords": [
         "web3",
@@ -22,5 +22,12 @@
         "name": "ChainSafe Gaming",
         "email": "bd@chainsafe.io",
         "url": "https://gaming.chainsafe.io/"
-    }
+    },
+    "samples": [
+        {
+            "displayName": "Marketplace Samples",
+            "description": "Contains example of integration and usage of Marketplace functionality.",
+            "path": "Samples~/Web3.Unity MUD"
+        }
+    ]
 }
