--- a/.github/workflows/pull_request_checks_dev.yml
+++ b/.github/workflows/pull_request_checks_dev.yml
@@ -11,4 +11,4 @@ on:
 jobs:
   pull_reqest_checks:
     name: Pull Request Checks
-    uses: ChainSafe/web3.unity/.github/workflows/pull_request_checks.yaml@main
+    uses: ChainSafe/web3.unity/.github/workflows/pull_request_checks.yml@main
