--- a/.github/workflows/pull_request_checks_main.yml
+++ b/.github/workflows/pull_request_checks_main.yml
@@ -12,3 +12,4 @@ jobs:
   pull_reqest_checks:
     name: Pull Request Checks
     uses: ChainSafe/web3.unity/.github/workflows/pull_request_checks.yml@rob/ci-fixes
+    secrets: inherit
