--- a/.github/workflows/check_and_commit.yml
+++ b/.github/workflows/check_and_commit.yml
@@ -131,4 +131,4 @@ jobs:
         git diff-index --cached --quiet HEAD || git commit -m 'Auto Commit [skip ci]
         - Duplicate Packages Samples
         - Publish DLL Dependencies'
-        git push -f
+        git push -f origin HEAD:${{ github.ref_name }}
