branch name reverted

--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -15,6 +15,6 @@ jobs:
   unity_tests:
     name: Unity Tests
     if: ${{ github.base_ref == 'main' }}
-    uses: ChainSafe/web3.unity/.github/workflows/check_and_commit.yml@rob/ci-fixes
+    uses: ChainSafe/web3.unity/.github/workflows/check_and_commit.yml@main
     needs: [ analyze_code ]
     secrets: inherit
