--- a/.github/workflows/pull_request_checks_main.yml
+++ b/.github/workflows/pull_request_checks_main.yml
@@ -11,5 +11,5 @@ on:
 jobs:
   pull_reqest_checks:
     name: Pull Request Checks
-    uses: ChainSafe/web3.unity/.github/workflows/pull_request_checks.yml@rob/ci-fixes
+    uses: ChainSafe/web3.unity/.github/workflows/pull_request_checks.yml@main
     secrets: inherit
