--- a/Setup/Setup.csproj
+++ b/Setup/Setup.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="System.Management.Automation" Version="7.4.5" />
     </ItemGroup>
 
 </Project>
