--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Run
         run: |
           cd Setup
-          dotnet run Setup/Setup.csproj
+          dotnet run -release:3.0.1 Setup/Setup.csproj
