--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,7 @@ jobs:
   release:
     name: Release job
     runs-on: ubuntu-latest
+    needs: [ setup ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
