--- a/.github/workflows/duplicate_samples.yaml
+++ b/.github/workflows/duplicate_samples.yaml
@@ -1,7 +1,9 @@
 name: Duplicate Samples 🪞
 
 on:
-  workflow_call:
+  push:
+    branches:
+      - rob/publish-tool-1120
     
 jobs:
   setup:
@@ -10,3 +12,22 @@ jobs:
     with:
       arguments: "-duplicate_samples"
     secrets: inherit
+  check:
+    name: Check job
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref_name }}
+          lfs: true
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Cache
+        uses: actions/cache/restore@v4
+        with:
+          path: .git
+          key: ${{ runner.os }}-git
+      - name: Run
+        run: |
+          git reset --hard
+    
