sync dependencies done

--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Run
         run: |
           cd Setup
-          dotnet run ${{ inputs.arguments || github.event.inputs.arguments }} Setup/Setup.csproj
+          dotnet run ${{ inputs.arguments || github.event.inputs.arguments }} Setup/Setup.csproj /property:GIT_ENABLED=true
           git reset --hard
       - name: Cache
         uses: actions/cache/save@v4
