removed restore added git enable property

--- a/Setup/Setup.csproj
+++ b/Setup/Setup.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="System.Management.Automation" Version="7.4.5" />
     </ItemGroup>
 
+    <PropertyGroup Condition="'$(GIT_ENABLED)' == 'True'">
+        <DefineConstants>GIT_ENABLED</DefineConstants>
+    </PropertyGroup>
+    
 </Project>
