--- a/.github/workflows/duplicate_samples.yaml
+++ b/.github/workflows/duplicate_samples.yaml
@@ -2,12 +2,27 @@ name: Duplicate Samples 🪞
 
 on:
   workflow_call:
+  workflow_dispatch:
+    inputs:
+      arguments:
+        required: false
+        description: 'Run Arguments'
+        type: string
+      configuration:
+        required: true
+        description: 'Run Configuration'
+        default: 'Release'
+        type: choice
+        options:
+          - Release
+          - Debug
+    
     
 jobs:
   setup:
     name: Duplicate job
     uses: ChainSafe/web3.unity/.github/workflows/setup.yaml@rob/publish-tool-1120
     with:
-      arguments: "-duplicate_samples"
+      arguments: "-duplicate_samples ${{ github.event.inputs.arguments || '-git:enabled' }} -c ${{ github.event.inputs.configuration || 'Release' }}"
     secrets: inherit
     
