--- a/.github/workflows/sync_dependencies.yaml
+++ b/.github/workflows/sync_dependencies.yaml
@@ -5,12 +5,26 @@ on:
   push:
     branches:
       - rob/publish-tool-1120
+  workflow_dispatch:
+    inputs:
+      arguments:
+        required: false
+        description: 'Run Arguments'
+        type: string
+      configuration:
+        required: true
+        description: 'Run Configuration'
+        default: 'Release'
+        type: choice
+        options:
+          - Release
+          - Debug
     
 jobs:
   setup:
     name: Sync job
     uses: ChainSafe/web3.unity/.github/workflows/setup.yaml@rob/publish-tool-1120
     with:
-      arguments: "-sync_dependencies"
+      arguments: "-sync_dependencies ${{ github.event.inputs.arguments || '-git:enabled' }} -c ${{ github.event.inputs.configuration || 'Release' }}"
     secrets: inherit
     
