--- a/.github/workflows/push_checks.yml
+++ b/.github/workflows/push_checks.yml
@@ -5,7 +5,17 @@ on:
     branches: [ dev ]
 
 jobs:
-  check_and_commit:
-    name: Check and Commit
-    uses: ChainSafe/web3.unity/.github/workflows/check_and_commit.yml@main
+  duplicate_samples:
+    name: Duplicate Samples 🪞
+    uses: ChainSafe/web3.unity/.github/workflows/duplicate_samples.yaml@main
+    secrets: inherit
+  sync_dependencies:
+    name: Sync Dependencies 🔄
+    uses: ChainSafe/web3.unity/.github/workflows/sync_dependencies.yaml@main
+    needs: [ duplicate_samples ]
+    secrets: inherit
+  unity_tests:
+    name: Unity Tests 🧪
+    uses: ChainSafe/web3.unity/.github/workflows/unity_tests.yml@main
+    needs: [ sync_dependencies ]
     secrets: inherit
