--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -20,6 +20,7 @@ jobs:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Sync Branches
         run: |
+          git fetch origin main
           git merge main
           git push
         shell: bash
