--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -21,6 +21,6 @@ jobs:
       - name: Sync Branches
         run: |
           git fetch origin main
-          git merge main
+          git merge origin/main
           git push
         shell: bash
