--- a/.github/workflows/push_checks_main.yml
+++ b/.github/workflows/push_checks_main.yml
@@ -8,4 +8,6 @@ jobs:
   sync_branches:
     name: Sync Branches ♾️
     uses: ChainSafe/web3.unity/.github/workflows/sync_branches.yaml@main
+    with:
+      branch: dev
     secrets: inherit
