--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -1,11 +1,17 @@
-name: Duplicate Samples
+name: Sync Branches
 
 on:
   workflow_call:
+    inputs:
+      branch:
+        required: true
+        type: string
   workflow_dispatch:
-  push: 
-    branches:
-      - rob/publish-tool-1120
+    inputs:
+      branch:
+        required: true
+        description: "Branch to Sync"
+        type: string
 
 jobs:
   setup:
@@ -20,9 +26,12 @@ jobs:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Sync Branches
         run: |
-          git config --global user.email "rob1997@users.noreply.github.com"
-          git config --global user.name "rob1997"
-          git fetch origin main
-          git merge origin/main --allow-unrelated-histories
+          git config user.email $git_email
+          git config user.name $git_actor
+          git fetch origin ${{ github.event.inputs.branch }}
+          git merge main --allow-unrelated-histories
           git push
         shell: bash
+        env:
+          git_email: "${{ github.actor }}@users.noreply.github.com"
+          git_actor: "${{ github.actor }}"
