--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -10,14 +10,16 @@ jobs:
     uses: ChainSafe/web3.unity/.github/workflows/test.yaml@main
   analyze_code:
     name: Analyze 🧐
+    if: ${{ github.event.action == 'ready_for_review' || github.event.label.name == 'ready-to-merge'}}
     uses: ChainSafe/web3.unity/.github/workflows/codeql.yml@main
   unity_tests:
     name: Unity Tests 🧪
+    if: ${{ github.event.action == 'ready_for_review' || github.event.label.name == 'ready-to-merge'}}
     uses: ChainSafe/web3.unity/.github/workflows/unity_tests.yml@main
     secrets: inherit
   sync_dependencies:
     name: Sync Dependencies 🔄
-    if: ${{ github.base_ref == 'main' && github.event.action == 'sync' }}
+    if: ${{ github.base_ref == 'main' && github.event.label.name == 'sync' }}
     uses: ChainSafe/web3.unity/.github/workflows/sync_dependencies.yaml@main
     secrets: inherit
   duplicate_samples:
