try labeler with GitHub token

--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -12,3 +12,5 @@ jobs:
     steps:
       - id: label-the-PR
         uses: actions/labeler@v5
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
