--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -13,4 +13,4 @@ jobs:
       - id: label-the-PR
         uses: actions/labeler@v5
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.DEPLOY_KEY }}
