--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -4,10 +4,27 @@ on:
   workflow_call:
 
 jobs:
+  check_commit:
+    name: Check Commit 📝
+    runs-on: ubuntu-latest
+    outputs:
+      commit_message: ${{ steps.get_head_commit_message.outputs.HEAD_COMMIT_MESSAGE }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref_name }}
+          lfs: true
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Get Head Commit Message
+        id: get_head_commit_message
+        run: echo "HEAD_COMMIT_MESSAGE=$(git show -s --format=%s)" >> "$GITHUB_OUTPUT"
+  
   web3_tests:
     name: Web3 tests 🕸
-    if: ${{ github.event.action == 'ready_for_review' || github.event.label.name == 'ready-to-merge'}}
+    if: ${{ needs.check_commit.outputs.commit_message == 'Sync Dependencies' }}
     uses: ChainSafe/web3.unity/.github/workflows/test.yaml@main
+    needs: [ check_commit ]
   analyze_code:
     name: Analyze 🧐
     if: ${{ github.event.action == 'ready_for_review' || github.event.label.name == 'ready-to-merge'}}
