--- a/.github/workflows/pull_request_checks_main.yml
+++ b/.github/workflows/pull_request_checks_main.yml
@@ -6,11 +6,51 @@ on:
       - main
     types:
       - labeled
-      - ready_for_review
       - synchronize
 
+env:
+  sync_commit_message: "Sync Dependencies - Auto Commit"
+
 jobs:
-  pull_reqest_checks:
-    name: Pull Request Checks
-    uses: ChainSafe/web3.unity/.github/workflows/pull_request_checks.yml@rob/ci-fix-1
+  check_commit:
+    name: Check Commit 📝
+    runs-on: ubuntu-latest
+    outputs:
+      commit_message: ${{ steps.get_head_commit_message.outputs.HEAD_COMMIT_MESSAGE }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref_name }}
+          lfs: true
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Get Head Commit Message
+        id: get_head_commit_message
+        run: echo "HEAD_COMMIT_MESSAGE=$(git show -s --format=%s)" >> "$GITHUB_OUTPUT"
+  
+  web3_tests:
+    name: Web3 tests 🕸
+    if: ${{ needs.check_commit.outputs.commit_message == env.sync_commit_message }}
+    uses: ChainSafe/web3.unity/.github/workflows/test.yaml@main
+    needs: [ check_commit ]
+  analyze_code:
+    name: Analyze 🧐
+    if: ${{ needs.check_commit.outputs.commit_message == env.sync_commit_message }}
+    uses: ChainSafe/web3.unity/.github/workflows/codeql.yml@main
+    needs: [ check_commit ]
+  unity_tests:
+    name: Unity Tests 🧪
+    if: ${{ needs.check_commit.outputs.commit_message == env.sync_commit_message }}
+    uses: ChainSafe/web3.unity/.github/workflows/unity_tests.yml@main
+    needs: [ check_commit ]
+    secrets: inherit
+  duplicate_samples:
+    name: Duplicate Samples 🪞
+    if: ${{ github.base_ref == 'main' && github.event.label.name == 'ready-to-merge' }}
+    uses: ChainSafe/web3.unity/.github/workflows/duplicate_samples.yaml@main
+    secrets: inherit
+  sync_dependencies:
+    name: Sync Dependencies 🔄
+    uses: ChainSafe/web3.unity/.github/workflows/sync_dependencies.yaml@main
+    needs: [ duplicate_samples ]
     secrets: inherit
