--- a/Packages/io.chainsafe.web3-unity/Tests/Runtime/chainsafe.web3-unity.RuntimeTests.asmdef
+++ b/Packages/io.chainsafe.web3-unity/Tests/Runtime/chainsafe.web3-unity.RuntimeTests.asmdef
@@ -19,8 +19,12 @@
         "ChainSafe.Gaming.Unity.dll",
         "ChainSafe.Gaming.Gelato.dll",
         "ChainSafe.Gaming.WalletConnect.dll",
+        "ChainSafe.Gaming.InProcessSigner.dll",
+        "ChainSafe.Gaming.InProcessTransactionExecutor.dll",
         "Nethereum.RPC.dll",
-        "Newtonsoft.Json.dll"
+        "Newtonsoft.Json.dll",
+        "Nethereum.Signer.dll",
+        "Nethereum.Accounts.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
