some cleanup and refactor

--- a/src/UnitySampleProject/Assets/Tests/chainsafe.web3-unity.RuntimeTests.asmdef
+++ b/src/UnitySampleProject/Assets/Tests/chainsafe.web3-unity.RuntimeTests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "chainsafe.web3-unity"
+        "chainsafe.web3-unity",
+        "Samples"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
