--- a/.github/workflows/unity_tests.yml
+++ b/.github/workflows/unity_tests.yml
@@ -19,10 +19,9 @@ jobs:
     - uses: actions/checkout@v4
       with:
         lfs: true
-    - name: update submodules
-      run: |
-        git submodule update --init
-      shell: bash
+        submodules: recursive
+    - name: Install Foundry
+      uses: foundry-rs/foundry-toolchain@v1
     - uses: actions/cache@v2
       with:
         path: ${{ matrix.projectPath }}/Library
