--- a/.github/workflows/unity_tests.yml
+++ b/.github/workflows/unity_tests.yml
@@ -3,6 +3,9 @@ name: Unity Tests
 on:
   workflow_call:
   workflow_dispatch:
+  push:
+    branches:
+      - rob/move-tests-to-anvil-625
 
 jobs:
   unity_tests:
