--- a/.github/workflows/unity_tests.yml
+++ b/.github/workflows/unity_tests.yml
@@ -27,7 +27,7 @@ jobs:
       uses: foundry-rs/foundry-toolchain@v1
     - name: Start Anvil
       run: |
-        anvil --fork-url https://rpc.ankr.com/eth_sepolia --mnemonic "test test test test test test test test test test test junk" &
+        anvil --host 0.0.0.0 --fork-url https://rpc.ankr.com/eth_sepolia --mnemonic "test test test test test test test test test test test junk" &
     - uses: actions/cache@v2
       with:
         path: ${{ matrix.projectPath }}/Library
