--- a/.github/workflows/pull_request_checks_main.yml
+++ b/.github/workflows/pull_request_checks_main.yml
@@ -13,7 +13,7 @@ jobs:
   check_commit:
     name: Check Commit 📝
     runs-on: ubuntu-latest
-    if: ${{ !github.event.pull_request.draft }}
+    if: ${{ !github.event.pull_request.draft && contains( github.event.pull_request.labels.*.name, 'ready-to-merge') }}
     outputs:
       commit_message: ${{ steps.get_head_commit_message.outputs.HEAD_COMMIT_MESSAGE }}
     steps:
@@ -33,7 +33,7 @@ jobs:
     if: ${{ needs.check_commit.outputs.commit_message == 'Sync Dependencies - Auto Commit' }}
     needs: [ check_commit ]
     steps:
-      - run: echo "..."
+      - run: echo "Proceeding to checks..."
   
   web3_tests:
     name: Web3 tests 🕸
