--- a/.github/workflows/pull_request_checks_main.yml
+++ b/.github/workflows/pull_request_checks_main.yml
@@ -54,7 +54,7 @@ jobs:
     needs: [ pre_job ]
   duplicate_samples:
     name: Duplicate Samples 🪞
-    if: ${{ (github.event.action == 'ready_for_review' || github.event.label.name == 'ready-to-merge') && needs.check_commit.outputs.commit_message != 'Sync Dependencies - Auto Commit'}}
+    if: ${{ (github.event.action == 'ready_for_review' || (!github.event.pull_request.draft && contains( github.event.pull_request.labels.*.name, 'ready-to-merge'))) && needs.check_commit.outputs.commit_message != 'Sync Dependencies - Auto Commit'}}
     uses: ChainSafe/web3.unity/.github/workflows/duplicate_samples.yaml@main
     needs: [ check_commit ]
     secrets: inherit
