--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -3,12 +3,19 @@ name: Sync Branches
 on:
   workflow_call:
     inputs:
-      branch:
+      base:
+        required: true
+        type: string
+      target:
         required: true
         type: string
   workflow_dispatch:
     inputs:
-      branch:
+      base:
+        required: true
+        description: "Branch to Sync"
+        type: string
+      target:
         required: true
         description: "Branch to Sync"
         type: string
@@ -21,17 +28,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref || github.ref_name }}
+          ref: ${{ github.event.inputs.target }}
           lfs: true
           ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Sync Branches
         run: |
           git config user.email $git_email
           git config user.name $git_actor
-          git fetch origin ${{ github.event.inputs.branch }}
-          git checkout ${{ github.event.inputs.branch }}
-          git pull
-          git merge main --allow-unrelated-histories
+          git merge ${{ github.event.inputs.base }} --allow-unrelated-histories
           git push
         shell: bash
         env:
