--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -27,21 +27,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.target }}
-          lfs: true
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Sync Branches
-        run: |
-          git config user.email $git_email
-          git config user.name $git_actor
-          git branch --show-current
-          git branch
-          git fetch
-          echo "Syncing branches... base: ${{ inputs.base }} target: ${{ inputs.target }}"
-          git merge ${{ inputs.base }} --allow-unrelated-histories
-          git push
-        shell: bash
-        env:
-          git_email: "${{ github.actor }}@users.noreply.github.com"
-          git_actor: "${{ github.actor }}"
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: ${{ inputs.base }}
+          target_branch: ${{ inputs.target }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
