--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -33,4 +33,5 @@ jobs:
           type: now
           from_branch: ${{ inputs.base }}
           target_branch: ${{ inputs.target }}
+          message: Auto Merge [skip ci]
           github_token: ${{ secrets.GITHUB_TOKEN }}
