--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -40,8 +40,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Set Automation
         if: ${{ inputs.skip_ci }}
-        run: |
-          $message += " [ skip-ci ]"
+        run: echo $message += " [ skip-ci ]"
       - name: Sync Branches
         uses: devmasx/merge-branch@master
         with:
