trying some stuff

--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -47,5 +47,5 @@ jobs:
           type: now
           from_branch: ${{ inputs.base }}
           target_branch: ${{ inputs.target }}
-          message: $message
+          message: ${{ env.message }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
