--- a/.github/workflows/push_checks_main.yml
+++ b/.github/workflows/push_checks_main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   sync_branches:
     name: Sync Branches ♾️
-    uses: ChainSafe/web3.unity/.github/workflows/sync_branches.yaml@rob/main
+    uses: ChainSafe/web3.unity/.github/workflows/sync_branches.yaml@main
     with:
       base: main
       target: dev
