--- a/.github/workflows/push_checks_main.yml
+++ b/.github/workflows/push_checks_main.yml
@@ -2,13 +2,13 @@ name: Post Push Checks
 
 on:
   push:
-    branches: [ main ]
+    branches: [ rob/sync-branches-ci-fix ]
 
 jobs:
   sync_branches:
     name: Sync Branches ♾️
-    uses: ChainSafe/web3.unity/.github/workflows/sync_branches.yaml@main
+    uses: ChainSafe/web3.unity/.github/workflows/sync_branches.yaml@rob/sync-branches-ci-fix
     with:
-      base: main
-      target: dev
+      base: rob/sync-branches-ci-fix
+      target: rob/sync-branches-ci-fix-test-branch
     secrets: inherit
