--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -52,8 +52,9 @@ jobs:
           git branch
           git fetch origin ${{ env.target }}
           git checkout ${{ env.target }}
+          git log --name-status HEAD^..HEAD
           git pull
-          git merge ${{ env.base }} --allow-unrelated-histories
+          git merge ${{ env.base }}
           git push
         shell: bash
         env:
