--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -6,12 +6,24 @@ on:
       arguments:
         required: true
         type: string
+      configuration:
+        required: false
+        type: string
+        default: "Release"
   workflow_dispatch: 
     inputs:
       arguments:
         required: true
         description: 'Arguments to pass to the setup script'
         type: string
+      configuration:
+        required: true
+        description: 'Run Configuration'
+        default: 'Release'
+        type: choice
+        options:
+          - Release
+          - Debug
 env:
   git_email: "${{ github.actor }}@users.noreply.github.com"
   git_actor: "${{ github.actor }}"
@@ -36,10 +48,5 @@ jobs:
       - name: Run
         run: |
           cd Setup
-          dotnet run ${{ inputs.arguments || github.event.inputs.arguments }} Setup/Setup.csproj
+          dotnet run -c ${{ inputs.configuration || github.event.inputs.configuration }} ${{ inputs.arguments || github.event.inputs.arguments }}
           git reset --hard
-      - name: Cache
-        uses: actions/cache/save@v4
-        with:
-          path: .git
-          key: ${{ runner.os }}-git
