--- a/.github/workflows/sync_branches.yaml
+++ b/.github/workflows/sync_branches.yaml
@@ -1,4 +1,4 @@
-name: Sync Branches
+name: Sync Branches ♾️
 
 on:
   workflow_call:
@@ -29,36 +29,14 @@ on:
         default: true
 
 env:
-  message: "Auto Sync with ${{ inputs.base }}"
   base: ${{ github.event.inputs.base || inputs.base }}
   target: ${{ github.event.inputs.target || inputs.target }}
+  skip_ci: ${{ github.event.inputs.skip_ci || inputs.skip_ci }}
 
 jobs:
-  sync:
+  setup:
     name: Sync Branches ♾️
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ env.target }}
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-      - name: Set Automation
-        if: ${{ inputs.skip_ci }}
-        run: |
-          skip_ci=" [skip-ci]"
-          echo "message=$message$skip_ci" >> $GITHUB_ENV
-      - name: Sync Branches
-        run: |
-          git config user.email $git_email
-          git config user.name $git_actor
-          git status
-          git fetch origin ${{ env.base }}
-          git checkout ${{ env.base }}
-          git checkout ${{ env.target }}
-          git merge ${{ env.base }} --allow-unrelated-histories
-          git push
-        shell: bash
-        env:
-          git_email: "${{ github.actor }}@users.noreply.github.com"
-          git_actor: "${{ github.actor }}"
+    uses: ChainSafe/web3.unity/.github/workflows/setup.yaml@main
+    with:
+      arguments: "-b ${{ env.base }} -t ${{ env.taret }} -s ${{ env.skip_ci }}"
+    secrets: inherit
