--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
     name: Setup job
     uses: ChainSafe/web3.unity/.github/workflows/setup.yaml@main
     with:
-      arguments: "-p ${{ github.event.inputs.version }}"
+      arguments: "-r ${{ github.event.inputs.version }}"
     secrets: inherit
   release:
     name: Release job
