push in a separate step

--- a/.github/workflows/reauthor.yaml
+++ b/.github/workflows/reauthor.yaml
@@ -51,5 +51,6 @@ jobs:
               export GIT_AUTHOR_EMAIL="$CORRECT_EMAIL"
           fi
           ' --tag-name-filter cat -- --branches --tags
-          
+      - name: Force Push
+        run: |
           git push --force --tags origin 'refs/heads/*'
